// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> with beta < stable opens target list 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 button,
.c2 a {
  margin: 1ex 1ex;
}

.c0 {
  width: 80vw;
  height: 90vh;
  max-width: 1440px;
  max-height: 720px;
  padding: 2em;
}

.c1 {
  position: absolute;
  right: 1em;
  top: 1ex;
  font-size: 2em;
}

<div
  class="c0"
  data-testid="modal-container"
>
  <button
    aria-label="Close dialog"
    class="ms-Button ms-Button--action ms-Button--command c1 root-53"
    data-is-focusable="true"
    data-testid="close-dialog"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-54"
      data-automationid="splitbuttonprimary"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <h2>
    Stable
  </h2>
  <div
    class="c2"
  >
    <a
      aria-describedby="id__84"
      aria-label="Stable, v10.4.0, win-x64-setup"
      class="ms-Button ms-Button--compoundPrimary root-71"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__83"
          >
            Windows (x64)
          </span>
          <span
            class="ms-Button-description description-77"
            id="id__84"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__87"
      aria-label="Stable, v10.4.0, linux-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__86"
          >
            Linux (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__87"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__90"
      aria-label="Stable, v10.4.0, linux-deb-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi_10.4.0_amd64.deb"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__89"
          >
            Debian / Ubuntu (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__90"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__93"
      aria-label="Stable, v10.4.0, linux-rpm-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.x86_64.rpm"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__92"
          >
            Fedora / CentOS (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__93"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__96"
      aria-label="Stable, v10.4.0, macos-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.dmg"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__95"
          >
            macOS (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__96"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__99"
      aria-label="Stable, v10.4.0, win-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0-win.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__98"
          >
            Windows (x64) Portable
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__99"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__102"
      aria-label="Stable, v10.4.0, win-ia32-setup"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__101"
          >
            Windows (x86)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__102"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__105"
      aria-label="Stable, v10.4.0, win-ia32"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0-ia32-win.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__104"
          >
            Windows (x86) Portable
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__105"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
  </div>
  <h2>
    Others
  </h2>
  <div
    class="c2"
  >
    <a
      aria-describedby="id__108"
      aria-label="Old versions"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__107"
          >
            Old versions
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__108"
          >
            Hosted at TAONPM
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__111"
      aria-label="Windows nightlies"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://ci.appveyor.com/project/KochiyaOcean/poi"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__110"
          >
            Windows nightlies
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__111"
          >
            Hosted at AppVeyor
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__114"
      aria-label="Linux and macOS nightlies"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://nightly.poi.moe/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__113"
          >
            Linux and macOS nightlies
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__114"
          >
            Hosted at poi.moe
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__117"
      aria-label="Source code"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://github.com/poooi/poi"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__116"
          >
            Source code
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__117"
          >
            Hosted at GitHub
          </span>
        </span>
      </span>
    </a>
  </div>
</div>
`;

exports[`<Content /> with beta < stable renders 1`] = `
<DocumentFragment>
  .c7 {
  display: inline-block;
  margin: 20px 10px;
}

.c8 {
  opacity: 1;
}

.c8 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c9 {
  opacity: 0;
  display: none;
}

.c9 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: normal;
}

.c5 {
  font-size: 100px;
}

.c6 {
  font-size: 36px;
  text-align: center;
  white-space: pre-line;
}

.c3 {
  -webkit-transition: 0.3s;
  transition: 0.3s;
  opacity: 1;
  position: absolute;
}

.c4 {
  -webkit-transition: 0.3s;
  transition: 0.3s;
  opacity: 0;
  position: absolute;
}

.c2 {
  position: relative;
  height: 150px;
  width: 150px;
}

.c2 img {
  height: 150px;
  width: 150px;
}

.c10 {
  text-align: center;
  min-height: 150px;
}

.c10 .ms-Spinner-label {
  font-size: 20px;
}

.c11 {
  font-size: 22px;
  margin-bottom: 2vh;
}

.c12 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c12:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c13 {
  font-size: 14px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 auto;
}

.c15 {
  font-size: 1em;
}

@media screen and (min-width:768px) {
  .c5 {
    font-size: 200px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    font-size: 48px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    width: 300px;
    height: 300px;
  }

  .c2 img {
    height: 300px;
    width: 300px;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    font-size: 26px;
  }
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          class="c3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAMAAAANIilAAAAC/VBMVEUAAAA/MC4AAAA1Lis2Liv/++ft4s/y5dKTg2/Wx7Xr3ssvJSLPwq7g1MChk3qLfGg3KicpHhz//e316dbo3Mm+sKH27tmZiXNkWVV1Wk2rn5MvJyfazbwtBQOXfWqunpE3Lis2LSn59Of76NHLsJeejX+PfmzU0tLMvKuol4qEcWYAAADc08THva61q6E3LywxLCjj2MW7rJeajHVEAADGtqY6MjH99d9kUkf38eKDbFy9tK3k2sk2LSs2LSs2JyTpzrGwoZGOg3orHBmVioCqkn+FZFbd3NyhnJs9NjKLemnn3szh18WaiX+zo5eup6U6Mi+Uhn02LSo3KCEGAADn5OS2s7KblJKom4R2ZVh8a1ZMQ0JaS0RvZmBaPzK0ppi2nIRvVUf8+vfr4894YlHy6taLgHvFvbnRybihl5PIwsCekobQycWJeG48My/Nycjx17mrp6awoIfx6tfEuKusnoU2JSbHwsFbMSCfkYfXzbrZ0czh2tY2LSrTy8i/tKZ8aWA2Lis2LirCqpNoSTtOKyHXvaU2AAWKeWS8oopDMy6Dd3Hp4N1cTkuBbGOZjog1LSoAAAA2LSp/c2yKcGA2NUTw3sh7UzZUHgymjHlBGxh5NBfHvKz18e++tbNrWVPw7eqml402LStpU04ZAAAOAAB7CgDt2b9OOjnNxLuTgEx+OSuzqJt2aWVhNzD07+MkDABpUEA/ODUQAANjT0x+amI6DwWYhnx0WVGKWltDJCKAdHROIx+dkIxzX1i8rqE9AABECh41LSo5MS358Ns3Lyz99eD/9+KzpoyrnoT379n67Nr/8d/77ds9NjP979yxo4muoIY7MzD68t346thAOjf/9OGmmX7///4uJiTcz7j/+eTDtp4bCwj//+kZEBu3qpAvKzslHiAiFhPHu6eFdmIgHzIRAAGVak4FCR6oPxsJAA/14cr748h7bWVPS0+jbjs+JiSfKADo4teDRgCIAACgeFWshEufTi2VRAmxTwGSMQDEgDqtVjYvMzAcT5xeAAAAwnRSTlMABP79+v7+/fj+/hX+/f39Kwv+/v38+/v7+uA2+/v59fFC/v7+/f38+vj29Onl4loh/v7+/fz8+vr49/Ty08VL/f39/fz8/Pv7+/bz8O7t7OffiWZQ/v7+/v79/fz7+/r4+PX09O/u7e3t6OTf3pX+/v7+/fr6+vf39O/s6+ro6N2rnv7+/v39+/r57+7u69i0p3j+/v79/f35+Pjx7unn5dS8oH9t/v39+fj19PHw6+ve0ci4tbCbfff2y8O9vLCmlzaYQlcAAAjYSURBVEjHtZcFcBs5FIYbmZPYSRpmZmZm5rSBhpmpzMxMx2U+Zmbwer1mO6bY4aZJU+ZjmNPacabXzLWZm7l/xuv16n16T0/S6nne/yU9qP+GzfoxN83YmhgYmMw8mzuqZxu4cGtCfFFRfMKR3mJbkzniuIntwgQiohWKX4jxC53xpjm4TTwCSZRAhCIQIrIjiATYA+F84LNw2Gh7HkVQHGNCKRTMVFSBdwQfJjhDg6exegsJCJMIQVyIAgBwBQApymQSiEyE2WuC0//GGicgzGyFSKGA9tAY1JQt9lycgtM4jiLxtjp6Nuu8ESFGXAFQwwhBhEwtLV28dFFZaRqoEiFMKKLUKVGbl9lsIhEhSoerli5enXV3mAlAVmarL1TWahg8UyGCAWUjaKAmrbP94myq1DOzrMwzM2tf15lWv3V5ubm5m238uw4CMK6GEfkC30sGENV7crxOCJGpAIsyAXi/dYPfGf/DfiODGJs93z9gJLKlPc3p+Dsdpzdt6iw8/HHJ47RmTX2oyBZFVIEsz/3tTdEykr/voRYWG8NIkT3tgyxsMDIvLpo0H4rk8jD2goEG0o3A5KgmT1MgPyCaRBqJzOuyD+tZYLPZ33/BAgs2i8WTYRhbxoNiyTDSw29stZweJEt++KqjsLBwwcGD7S1b1o00QWKLTVdArn+BjY0/ZKHYLB68ymTwwuNhsoCL01um5NsCerQLjKjxvRaM5LfFpqdrXaSNX9wC9giGYYOQhWriwe9pnAfjoH1iC7ec7ScnyYMkDKYGM5WxKTx23OY49ohFTxOvJ2/QIs6CpRE7r4AMnctkpjw2rkgS2f1Tg3klPusMJwwH6PRgmiEvejnbhUSaH/3egcPRqoC2+S6xZiQtjZ3M0WezWbSxIcMBKNqQ+4UgGPXFBga3v7+fG1puyn7o4tLo4qI6dXbDORfV+sPRI7GOME0sHp4wb0sKeaI/1NLSkjrZ/MH3JdoxX/rAUsLh9FmakciGPI2XpnV+XRZYy5a4kfY1dEzG1siumcPplxjd37dvVepHBpDTZjtxlRU1tNkLkw3QSWy2jIWZbW63kbEj/ZaP5PnmU3gUstnAxNCYD1XSJ+FWjRKI0iKDeSbTS8SWOcoE78ApCZ+gB5MteIO5+U0tLIvlFmSyV8O7K4c4HK512CSHcWhZX5+kYlSKEtBiiGnhhdIIKTiJsZZz4dAlMCWOUUOGQyFjnGWcnGP19gwJo/raTzsnlzUzJFzJ5Cjc8UjvPJ2OINnDVhQ2O9hS0sfllvdzY44z8BRyuRyqwxIHe6MdJ65du7bGY48Hh1FO1cAJerhr+DGJRxXgbTYPCzficPugOHt2h3L6NHeW1klLHEDYy2t2XHs5lFrJCWW438RhOGgtbFCkGK6Gk6jvgcO4qBkxEi4uyUrrXa6ubtb2U2GveIRQG8YYyXVAyiSgTsbTsLGTAphDNsQIwlB95R5uFaFjEg5U+fHtrvSBl3alZ4TVMqjWnMqUNCCCMMFWBxeBmuWDZpx+j0kJF0fGYgYMa/v7GZZ7KivT3dLN5dggJjZzt6/d0WDtYA2YKHxDOuvg1Ck7UvAYNWfCSCLptzQyMlqTTkvxyYlxSB+ibXegYWJyblwu2TQZ7NyblJR07CbyGBzkax45sExSncJLq6hsdkjfu337AC05mfaSKx8zcw+nOVIz3jrx1svUvIr6224vuC2JASItDGVycS19iLuSCp5n1e1s2HX71q1bFLlcfyLEVMkX8usWlVk9+u33Xx/88WacYZJbrRv9dj2AJ5CxFjb+OidnD9VqFbAim4c6uHp5pPjEZBgd86YJ+XK+gOqpWvTjL2/eu/ebg4UwKWNHvatrPYhANgbp5vmjK6vGR6VqkWEyw13f27P0zq+/P7r3wFIo5suVXktVZbtv/HLj3olYpWBXxt4X+K45IFv04czrr1dKQKUoqk7plyTrO6pUGQ9+uvHzz94CPp8v5nt7Nj7/6o0Hr3jzxWJ9D2s7kleqSKE+alBy4XMNXIwQ8ONF/TpjKIRS0Anj/PPGo8pgpVwo5Aso3rFLd4e94igXCG/dJusLvWrHp0DqFhs7+WfTqwSfOZSJUg296ZT8zEzrH1+NognkMF9ioUBoF26+IlgAx7DELSTcZxiAmjo7Ckn5nXZP6yUgRPxUHK1Y6UjByOYr3l67gizgCyFrCntQKgVKgVAsXrL3S2DvfqfBiyLASGaf6bbGcxqYgKibzZSmAoGpHFrL+aZCsZLuJZbL+WKBQPyS2wsAXLfya3NwVQrE4Z/jnHaZbMTjhodNFAXjy/Ghyk2FJHK4oXkIbVCpFFOCvZKtIXr5asT6DTFJ4oFzj58426BrKBFI0xfDKKEjJcWcTqPBBOnbrXBMq1h7CIyOX758+er+ttP1yz7VnXW6lOE0ioBq73C7YDN9ir65uTvdzM48f+2i1tOxAecKa8BdHAarS6uA7ozXvYkQIgGnRcNR6R7WPjFROw3n19Wm7LfpXp3V2R3Q2hPgWS26exWP+4DVUQg8DhvEw8A1tLo8xEjiA2qEcseAtrbuTasPrO9wfCPWptvT6vqLL74IOrLeh0vzibIARQkaWj0eNbkyCtQpKe5pBZs7uzsLfdZuOrUpv7vx7Blw/eZ1e/vif7La6SJoaAS9qYgaBXbzX3PMXFxw6OD+sN13rVrz3+1oVJ3tuHOnWt07uyLRZFzrW6oeV69aYfpawYYDhVWvf7HG/iYsStSgU6U65ffG80eh8Wxab6vWN550lDluZVTjYwWu3g+7j4iypTAX9htUqsb1Hxvo2Fk0k8jUaQoMXxlGEeZf2nCYoiv72kpLY3UDnkXDCUNmyj+RSCqVojg2LVEquN+baPzvlWfgRugcep8tAiyVii49vW4N2srEccITJEQR9IgxNHk6nnge2hEgrxN+jxe9gc8s2PFW520b8TIdOoTCc48gTlsTdXvhmXhQ4LZ4J0hp+nCK3xYYhDfM/f+JXpBzYPFzzxUHOhubzDydG673lAdz62BG8/4X/Q1kiVhmadIOFQAAAABJRU5ErkJggg=="
        />
        <img
          class="c4"
          src="poi.png"
        />
      </div>
      <span
        class="c5"
      >
        poi
      </span>
    </h1>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            data-testid="typist"
          />
        </div>
        <div
          class="c9"
          data-testid="typing"
        >
          Scalable KanColle browser and tool.
          <span
            style="opacity: 0;"
          >
            _
          </span>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        Download for Windows (x64)
      </div>
      <a
        data-testid="download-stable-version"
        href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
      >
        <button
          class="c12"
        >
          <div>
            v10.4.0
          </div>
          <div
            class="c13"
          >
            Stable, for most users
          </div>
        </button>
      </a>
    </div>
    <div
      class="c14"
    >
      <button
        class="ms-Button ms-Button--action ms-Button--command c15 root-53"
        data-is-focusable="true"
        data-testid="open-dialog"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-54"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-55"
          >
            <span
              class="ms-Button-label label-57"
              id="id__73"
            >
              Choose another platform
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Content /> with beta > stable opens target list 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 button,
.c2 a {
  margin: 1ex 1ex;
}

.c0 {
  width: 80vw;
  height: 90vh;
  max-width: 1440px;
  max-height: 720px;
  padding: 2em;
}

.c1 {
  position: absolute;
  right: 1em;
  top: 1ex;
  font-size: 2em;
}

<div
  class="c0"
  data-testid="modal-container"
>
  <button
    aria-label="Close dialog"
    class="ms-Button ms-Button--action ms-Button--command c1 root-53"
    data-is-focusable="true"
    data-testid="close-dialog"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-54"
      data-automationid="splitbuttonprimary"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <h2>
    Stable
  </h2>
  <div
    class="c2"
  >
    <a
      aria-describedby="id__13"
      aria-label="Stable, v10.4.0, win-x64-setup"
      class="ms-Button ms-Button--compoundPrimary root-71"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__12"
          >
            Windows (x64)
          </span>
          <span
            class="ms-Button-description description-77"
            id="id__13"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__16"
      aria-label="Stable, v10.4.0, linux-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__15"
          >
            Linux (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__16"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__19"
      aria-label="Stable, v10.4.0, linux-deb-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi_10.4.0_amd64.deb"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__18"
          >
            Debian / Ubuntu (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__19"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__22"
      aria-label="Stable, v10.4.0, linux-rpm-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.x86_64.rpm"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__21"
          >
            Fedora / CentOS (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__22"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__25"
      aria-label="Stable, v10.4.0, macos-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.dmg"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__24"
          >
            macOS (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__25"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__28"
      aria-label="Stable, v10.4.0, win-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0-win.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__27"
          >
            Windows (x64) Portable
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__28"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__31"
      aria-label="Stable, v10.4.0, win-ia32-setup"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__30"
          >
            Windows (x86)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__31"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__34"
      aria-label="Stable, v10.4.0, win-ia32"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0-ia32-win.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__33"
          >
            Windows (x86) Portable
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__34"
          >
            v10.4.0
          </span>
        </span>
      </span>
    </a>
  </div>
  <h2>
    Beta
  </h2>
  <div
    class="c2"
  >
    <a
      aria-describedby="id__37"
      aria-label="Beta, v10.5.0-beta.0, win-x64-setup"
      class="ms-Button ms-Button--compoundPrimary root-71"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-setup-10.5.0-beta.0.exe"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__36"
          >
            Windows (x64)
          </span>
          <span
            class="ms-Button-description description-77"
            id="id__37"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__40"
      aria-label="Beta, v10.5.0-beta.0, linux-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-10.5.0-beta.0.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__39"
          >
            Linux (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__40"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__43"
      aria-label="Beta, v10.5.0-beta.0, linux-deb-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi_10.5.0-beta.0_amd64.deb"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__42"
          >
            Debian / Ubuntu (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__43"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__46"
      aria-label="Beta, v10.5.0-beta.0, linux-rpm-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-10.5.0-beta.0.x86_64.rpm"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__45"
          >
            Fedora / CentOS (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__46"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__49"
      aria-label="Beta, v10.5.0-beta.0, macos-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-10.5.0-beta.0.dmg"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__48"
          >
            macOS (x64)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__49"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__52"
      aria-label="Beta, v10.5.0-beta.0, win-x64"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-10.5.0-beta.0-win.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__51"
          >
            Windows (x64) Portable
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__52"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__55"
      aria-label="Beta, v10.5.0-beta.0, win-ia32-setup"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-setup-10.5.0-beta.0.exe"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__54"
          >
            Windows (x86)
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__55"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__58"
      aria-label="Beta, v10.5.0-beta.0, win-ia32"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-10.5.0-beta.0-ia32-win.7z"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__57"
          >
            Windows (x86) Portable
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__58"
          >
            v10.5.0-beta.0
          </span>
        </span>
      </span>
    </a>
  </div>
  <h2>
    Others
  </h2>
  <div
    class="c2"
  >
    <a
      aria-describedby="id__61"
      aria-label="Old versions"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://npm.taobao.org/mirrors/poi"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__60"
          >
            Old versions
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__61"
          >
            Hosted at TAONPM
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__64"
      aria-label="Windows nightlies"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://ci.appveyor.com/project/KochiyaOcean/poi"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__63"
          >
            Windows nightlies
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__64"
          >
            Hosted at AppVeyor
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__67"
      aria-label="Linux and macOS nightlies"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://nightly.poi.moe/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__66"
          >
            Linux and macOS nightlies
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__67"
          >
            Hosted at poi.moe
          </span>
        </span>
      </span>
    </a>
    <a
      aria-describedby="id__70"
      aria-label="Source code"
      class="ms-Button ms-Button--compound root-78"
      data-is-focusable="true"
      href="https://github.com/poooi/poi"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="ms-Button-flexContainer flexContainer-72"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-73"
        >
          <span
            class="ms-Button-label label-75"
            id="id__69"
          >
            Source code
          </span>
          <span
            class="ms-Button-description description-79"
            id="id__70"
          >
            Hosted at GitHub
          </span>
        </span>
      </span>
    </a>
  </div>
</div>
`;

exports[`<Content /> with beta > stable renders 1`] = `
<DocumentFragment>
  .c7 {
  display: inline-block;
  margin: 20px 10px;
}

.c8 {
  opacity: 1;
}

.c8 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c9 {
  opacity: 0;
  display: none;
}

.c9 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: normal;
}

.c5 {
  font-size: 100px;
}

.c6 {
  font-size: 36px;
  text-align: center;
  white-space: pre-line;
}

.c3 {
  -webkit-transition: 0.3s;
  transition: 0.3s;
  opacity: 1;
  position: absolute;
}

.c4 {
  -webkit-transition: 0.3s;
  transition: 0.3s;
  opacity: 0;
  position: absolute;
}

.c2 {
  position: relative;
  height: 150px;
  width: 150px;
}

.c2 img {
  height: 150px;
  width: 150px;
}

.c10 {
  text-align: center;
  min-height: 150px;
}

.c10 .ms-Spinner-label {
  font-size: 20px;
}

.c11 {
  font-size: 22px;
  margin-bottom: 2vh;
}

.c12 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c12:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c14 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  display: none;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c14:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c13 {
  font-size: 14px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 auto;
}

.c16 {
  font-size: 1em;
}

@media screen and (min-width:768px) {
  .c5 {
    font-size: 200px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    font-size: 48px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    width: 300px;
    height: 300px;
  }

  .c2 img {
    height: 300px;
    width: 300px;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    font-size: 26px;
  }
}

@media screen and (min-width:768px) {
  .c14 {
    display: inline;
  }
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          class="c3"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAMAAAANIilAAAAC/VBMVEUAAAA/MC4AAAA1Lis2Liv/++ft4s/y5dKTg2/Wx7Xr3ssvJSLPwq7g1MChk3qLfGg3KicpHhz//e316dbo3Mm+sKH27tmZiXNkWVV1Wk2rn5MvJyfazbwtBQOXfWqunpE3Lis2LSn59Of76NHLsJeejX+PfmzU0tLMvKuol4qEcWYAAADc08THva61q6E3LywxLCjj2MW7rJeajHVEAADGtqY6MjH99d9kUkf38eKDbFy9tK3k2sk2LSs2LSs2JyTpzrGwoZGOg3orHBmVioCqkn+FZFbd3NyhnJs9NjKLemnn3szh18WaiX+zo5eup6U6Mi+Uhn02LSo3KCEGAADn5OS2s7KblJKom4R2ZVh8a1ZMQ0JaS0RvZmBaPzK0ppi2nIRvVUf8+vfr4894YlHy6taLgHvFvbnRybihl5PIwsCekobQycWJeG48My/Nycjx17mrp6awoIfx6tfEuKusnoU2JSbHwsFbMSCfkYfXzbrZ0czh2tY2LSrTy8i/tKZ8aWA2Lis2LirCqpNoSTtOKyHXvaU2AAWKeWS8oopDMy6Dd3Hp4N1cTkuBbGOZjog1LSoAAAA2LSp/c2yKcGA2NUTw3sh7UzZUHgymjHlBGxh5NBfHvKz18e++tbNrWVPw7eqml402LStpU04ZAAAOAAB7CgDt2b9OOjnNxLuTgEx+OSuzqJt2aWVhNzD07+MkDABpUEA/ODUQAANjT0x+amI6DwWYhnx0WVGKWltDJCKAdHROIx+dkIxzX1i8rqE9AABECh41LSo5MS358Ns3Lyz99eD/9+KzpoyrnoT379n67Nr/8d/77ds9NjP979yxo4muoIY7MzD68t346thAOjf/9OGmmX7///4uJiTcz7j/+eTDtp4bCwj//+kZEBu3qpAvKzslHiAiFhPHu6eFdmIgHzIRAAGVak4FCR6oPxsJAA/14cr748h7bWVPS0+jbjs+JiSfKADo4teDRgCIAACgeFWshEufTi2VRAmxTwGSMQDEgDqtVjYvMzAcT5xeAAAAwnRSTlMABP79+v7+/fj+/hX+/f39Kwv+/v38+/v7+uA2+/v59fFC/v7+/f38+vj29Onl4loh/v7+/fz8+vr49/Ty08VL/f39/fz8/Pv7+/bz8O7t7OffiWZQ/v7+/v79/fz7+/r4+PX09O/u7e3t6OTf3pX+/v7+/fr6+vf39O/s6+ro6N2rnv7+/v39+/r57+7u69i0p3j+/v79/f35+Pjx7unn5dS8oH9t/v39+fj19PHw6+ve0ci4tbCbfff2y8O9vLCmlzaYQlcAAAjYSURBVEjHtZcFcBs5FIYbmZPYSRpmZmZm5rSBhpmpzMxMx2U+Zmbwer1mO6bY4aZJU+ZjmNPacabXzLWZm7l/xuv16n16T0/S6nne/yU9qP+GzfoxN83YmhgYmMw8mzuqZxu4cGtCfFFRfMKR3mJbkzniuIntwgQiohWKX4jxC53xpjm4TTwCSZRAhCIQIrIjiATYA+F84LNw2Gh7HkVQHGNCKRTMVFSBdwQfJjhDg6exegsJCJMIQVyIAgBwBQApymQSiEyE2WuC0//GGicgzGyFSKGA9tAY1JQt9lycgtM4jiLxtjp6Nuu8ESFGXAFQwwhBhEwtLV28dFFZaRqoEiFMKKLUKVGbl9lsIhEhSoerli5enXV3mAlAVmarL1TWahg8UyGCAWUjaKAmrbP94myq1DOzrMwzM2tf15lWv3V5ubm5m238uw4CMK6GEfkC30sGENV7crxOCJGpAIsyAXi/dYPfGf/DfiODGJs93z9gJLKlPc3p+Dsdpzdt6iw8/HHJ47RmTX2oyBZFVIEsz/3tTdEykr/voRYWG8NIkT3tgyxsMDIvLpo0H4rk8jD2goEG0o3A5KgmT1MgPyCaRBqJzOuyD+tZYLPZ33/BAgs2i8WTYRhbxoNiyTDSw29stZweJEt++KqjsLBwwcGD7S1b1o00QWKLTVdArn+BjY0/ZKHYLB68ymTwwuNhsoCL01um5NsCerQLjKjxvRaM5LfFpqdrXaSNX9wC9giGYYOQhWriwe9pnAfjoH1iC7ec7ScnyYMkDKYGM5WxKTx23OY49ohFTxOvJ2/QIs6CpRE7r4AMnctkpjw2rkgS2f1Tg3klPusMJwwH6PRgmiEvejnbhUSaH/3egcPRqoC2+S6xZiQtjZ3M0WezWbSxIcMBKNqQ+4UgGPXFBga3v7+fG1puyn7o4tLo4qI6dXbDORfV+sPRI7GOME0sHp4wb0sKeaI/1NLSkjrZ/MH3JdoxX/rAUsLh9FmakciGPI2XpnV+XRZYy5a4kfY1dEzG1siumcPplxjd37dvVepHBpDTZjtxlRU1tNkLkw3QSWy2jIWZbW63kbEj/ZaP5PnmU3gUstnAxNCYD1XSJ+FWjRKI0iKDeSbTS8SWOcoE78ApCZ+gB5MteIO5+U0tLIvlFmSyV8O7K4c4HK512CSHcWhZX5+kYlSKEtBiiGnhhdIIKTiJsZZz4dAlMCWOUUOGQyFjnGWcnGP19gwJo/raTzsnlzUzJFzJ5Cjc8UjvPJ2OINnDVhQ2O9hS0sfllvdzY44z8BRyuRyqwxIHe6MdJ65du7bGY48Hh1FO1cAJerhr+DGJRxXgbTYPCzficPugOHt2h3L6NHeW1klLHEDYy2t2XHs5lFrJCWW438RhOGgtbFCkGK6Gk6jvgcO4qBkxEi4uyUrrXa6ubtb2U2GveIRQG8YYyXVAyiSgTsbTsLGTAphDNsQIwlB95R5uFaFjEg5U+fHtrvSBl3alZ4TVMqjWnMqUNCCCMMFWBxeBmuWDZpx+j0kJF0fGYgYMa/v7GZZ7KivT3dLN5dggJjZzt6/d0WDtYA2YKHxDOuvg1Ck7UvAYNWfCSCLptzQyMlqTTkvxyYlxSB+ibXegYWJyblwu2TQZ7NyblJR07CbyGBzkax45sExSncJLq6hsdkjfu337AC05mfaSKx8zcw+nOVIz3jrx1svUvIr6224vuC2JASItDGVycS19iLuSCp5n1e1s2HX71q1bFLlcfyLEVMkX8usWlVk9+u33Xx/88WacYZJbrRv9dj2AJ5CxFjb+OidnD9VqFbAim4c6uHp5pPjEZBgd86YJ+XK+gOqpWvTjL2/eu/ebg4UwKWNHvatrPYhANgbp5vmjK6vGR6VqkWEyw13f27P0zq+/P7r3wFIo5suVXktVZbtv/HLj3olYpWBXxt4X+K45IFv04czrr1dKQKUoqk7plyTrO6pUGQ9+uvHzz94CPp8v5nt7Nj7/6o0Hr3jzxWJ9D2s7kleqSKE+alBy4XMNXIwQ8ONF/TpjKIRS0Anj/PPGo8pgpVwo5Aso3rFLd4e94igXCG/dJusLvWrHp0DqFhs7+WfTqwSfOZSJUg296ZT8zEzrH1+NognkMF9ioUBoF26+IlgAx7DELSTcZxiAmjo7Ckn5nXZP6yUgRPxUHK1Y6UjByOYr3l67gizgCyFrCntQKgVKgVAsXrL3S2DvfqfBiyLASGaf6bbGcxqYgKibzZSmAoGpHFrL+aZCsZLuJZbL+WKBQPyS2wsAXLfya3NwVQrE4Z/jnHaZbMTjhodNFAXjy/Ghyk2FJHK4oXkIbVCpFFOCvZKtIXr5asT6DTFJ4oFzj58426BrKBFI0xfDKKEjJcWcTqPBBOnbrXBMq1h7CIyOX758+er+ttP1yz7VnXW6lOE0ioBq73C7YDN9ir65uTvdzM48f+2i1tOxAecKa8BdHAarS6uA7ozXvYkQIgGnRcNR6R7WPjFROw3n19Wm7LfpXp3V2R3Q2hPgWS26exWP+4DVUQg8DhvEw8A1tLo8xEjiA2qEcseAtrbuTasPrO9wfCPWptvT6vqLL74IOrLeh0vzibIARQkaWj0eNbkyCtQpKe5pBZs7uzsLfdZuOrUpv7vx7Blw/eZ1e/vif7La6SJoaAS9qYgaBXbzX3PMXFxw6OD+sN13rVrz3+1oVJ3tuHOnWt07uyLRZFzrW6oeV69aYfpawYYDhVWvf7HG/iYsStSgU6U65ffG80eh8Wxab6vWN550lDluZVTjYwWu3g+7j4iypTAX9htUqsb1Hxvo2Fk0k8jUaQoMXxlGEeZf2nCYoiv72kpLY3UDnkXDCUNmyj+RSCqVojg2LVEquN+baPzvlWfgRugcep8tAiyVii49vW4N2srEccITJEQR9IgxNHk6nnge2hEgrxN+jxe9gc8s2PFW520b8TIdOoTCc48gTlsTdXvhmXhQ4LZ4J0hp+nCK3xYYhDfM/f+JXpBzYPFzzxUHOhubzDydG673lAdz62BG8/4X/Q1kiVhmadIOFQAAAABJRU5ErkJggg=="
        />
        <img
          class="c4"
          src="poi.png"
        />
      </div>
      <span
        class="c5"
      >
        poi
      </span>
    </h1>
    <div
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            data-testid="typist"
          />
        </div>
        <div
          class="c9"
          data-testid="typing"
        >
          Scalable KanColle browser and tool.
          <span
            style="opacity: 0;"
          >
            _
          </span>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        Download for Windows (x64)
      </div>
      <a
        data-testid="download-stable-version"
        href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
      >
        <button
          class="c12"
        >
          <div>
            v10.4.0
          </div>
          <div
            class="c13"
          >
            Stable, for most users
          </div>
        </button>
      </a>
      <a
        href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-setup-10.5.0-beta.0.exe"
      >
        <button
          class="c14"
        >
          <div>
            v10.5.0-beta.0
          </div>
          <div
            class="c13"
          >
            Beta, for new features
          </div>
        </button>
      </a>
    </div>
    <div
      class="c15"
    >
      <button
        class="ms-Button ms-Button--action ms-Button--command c16 root-53"
        data-is-focusable="true"
        data-testid="open-dialog"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-54"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-55"
          >
            <span
              class="ms-Button-label label-57"
              id="id__2"
            >
              Choose another platform
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
